[gd_scene load_steps=2 format=3 uid="uid://cdi4rm5o4w7aw"]

[ext_resource type="Script" path="res://Scene/Objects/locker_code_1.gd" id="1_2vxkd"]

[node name="Locker_Code_1" type="Node2D"]
script = ExtResource("1_2vxkd")

[node name="Panel" type="Panel" parent="."]
offset_right = 853.0
offset_bottom = 288.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.5
offset_right = 30.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 104

[node name="Label1" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 210
text = "0"

[node name="Label2" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 210
text = "0"

[node name="Label3" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 210
text = "0"

[node name="Label4" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 210
text = "0"
